<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addProblemParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.raf.boulderingsessionloger.AddProblem">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="0dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="169dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="338dp" />

    <AutoCompleteTextView
        android:id="@+id/problemAddCircuitNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="8dp"
        android:hint="@string/circuit_name"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/problemAddCircuitNumberEditText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />


    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/attempts_number_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/problemAddCircuitNumberEditText"
        app:np_dividerColor="@color/colorPrimary"
        app:np_formatter="@string/attemps_picker_formatter"
        app:np_height="64dp"
        app:np_max="100"
        app:np_min="0"
        app:np_orientation="horizontal"
        app:np_selectedTextColor="@color/colorPrimary"
        app:np_textColor="@color/colorPrimary"
        app:np_textSize="12sp"
        app:np_typeface="@string/roboto_light"
        app:np_value="1"
        app:np_width="180dp"
        app:np_wrapSelectorWheel="false" />

    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/grade_number_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="240dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/coordinatorAddProblemSession"
        app:layout_constraintEnd_toEndOf="@+id/attempts_number_picker"
        app:layout_constraintLeft_toLeftOf="@+id/attempts_number_picker"
        app:layout_constraintStart_toStartOf="@+id/attempts_number_picker"
        app:layout_constraintTop_toBottomOf="@+id/attempts_number_picker"
        app:np_dividerColor="@color/colorPrimary"
        app:np_formatter="@string/number_picker_formatter"
        app:np_height="64dp"
        app:np_max="15"
        app:np_min="0"
        app:np_orientation="horizontal"
        app:np_selectedTextColor="@color/colorPrimary"
        app:np_textColor="@color/colorPrimary"
        app:np_textSize="12sp"
        app:np_typeface="@string/roboto_light"
        app:np_value="3"
        app:np_width="180dp"
        app:np_wrapSelectorWheel="false" />

    <EditText
        android:id="@+id/problemAddCircuitNumberEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:hint="@string/problem_number"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="@+id/problemAddCircuitNameEditText"
        app:layout_constraintRight_toRightOf="@+id/problemAddCircuitNameEditText"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_editor_absoluteY="68dp" />

    <Switch
        android:id="@+id/trainingAddProblemSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="242dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:showText="true"
        android:textOff="@string/training"
        android:textOn="@string/climb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/grade_number_picker"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <Switch
        android:id="@+id/completedAddProblemSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="242dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:showText="true"
        android:textOff="@string/project"
        android:textOn="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grade_number_picker"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1" />

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorAddProblemSession"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginBottom="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/saveProblemFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_done_black_24dp" />
    </android.support.design.widget.CoordinatorLayout>

</android.support.constraint.ConstraintLayout>
