<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/sessionCard"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:layout_margin="8dp"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/sendIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_redo_black_24dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/numberOfSendsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="19dp"
            android:layout_toEndOf="@+id/sendIcon"
            android:text="@string/_12_sends" />

        <ImageView
            android:id="@+id/avgIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@+id/numberOfSendsTextView"
            app:srcCompat="@drawable/ic_trending_flat_black_24dp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/sendAverageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="19dp"
            android:layout_toEndOf="@+id/avgIcon"
            android:text="@string/v6_average" />

        <TextView
            android:id="@+id/sessionHistoryID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="29dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/sessionHistoryID"
            android:layout_alignBottom="@+id/sessionHistoryID"
            android:layout_marginStart="14dp"
            android:layout_toEndOf="@+id/dateIcon"
            android:text="@string/textview" />

        <ImageView
            android:id="@+id/dateIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_today_black_24dp"
            android:layout_alignTop="@+id/avgIcon"
            android:layout_toEndOf="@+id/sendAverageTextView"
            android:layout_marginStart="13dp"
            android:contentDescription="" />


    </RelativeLayout>

</android.support.v7.widget.CardView>